fix site header on mobile

--- a/assets/css/site-header.css
+++ b/assets/css/site-header.css
@@ -1,5 +1,6 @@
 #site-nav {
   justify-content: center;
+  flex-flow: row wrap;
 }
 
 #site-nav h1 {
